# ai-agents

./: .env.example  .gitignore  CLAUDE.md  README.md
.claude/: settings.json
.claude/agents/: curriculum-explorer.md  pattern-reviewer.md
.claude/hooks/: auto-format.sh  block-secrets.sh  guard-bash.sh
.claude/skills/scaffold-day/: SKILL.md
.claude/skills/ship-day/: SKILL.md
hntop/: CLAUDE.md  README.md  pyproject.toml  test_client.py  test_model.py
hntop/src/hntop/: __init__.py  client.py  config.py  main.py  models.py
week0-python-sprint/: CLAUDE.md  README.md  d2c.md  day2-excercise.py  day2_pydantic.py  day2_types.py  day3_async.py  day3_gotcha.py  day3_patterns.py  day3_projects.py  day3_sync.py  day4_env.py  day4_settings.py  main.py  notes.md  pyproject.toml  quick_script.py
week0-python-sprint/src/fetcher/: client.py  main.py  models.py
week1-tri-provider-agent/: CLAUDE.md  README.md  notes.md  pyproject.toml
week1-tri-provider-agent/src/week1_tri_provider_agent/: __init__.py  agent.py  agent_streaming.py  benchmark.py  chat.py  config.py  first_call.py  gemini_agent.py  gemini_chat.py  gemini_first_call.py  gemini_tools.py  openai_agent.py  openai_chat.py  openai_first_call.py  openai_tools.py  streaming_chat.py  structured_output.py  tools.py
week2-agent-patterns/: CLAUDE.md  README.md  notes.md  pyproject.toml
week2-agent-patterns/src/week2_agent_patterns/: __init__.py  chain.py  composed.py  config.py  conversation.py  evaluator_optimizer.py  llm.py  memory_naive.py  memory_summarized.py  models.py  orchestrator.py  parallel.py  rag_agent.py  rag_index.py  rag_retrieve.py  router.py  scratchpad.py
week3-langgraph-pydantic-ai/: CLAUDE.md  README.md  pyproject.toml
week3-langgraph-pydantic-ai/src/week3_langgraph_pydantic_ai/: __init__.py  checkpointing_demo.py  compare_frameworks.py  config.py  content_chain.py  content_loop.py  decision_matrix.html  first_graph.py  hitl_workflow.py  pai_first_agent.py  pai_tool_agent.py  pai_tool_stream_agent.py  research_note_lg.py  research_note_pai.py
week4-mastra/: README.md  notes.md  package-lock.json  package.json
week4-mastra/src/: rag-demo.ts  run-content-workflow.ts  run-parallel-critic.ts  run-tool-agent.ts
week4-mastra/src/mastra/: index.ts
week4-mastra/src/mastra/agents/: content-agent.ts  tool-agent.ts  weather-agent.ts
week4-mastra/src/mastra/public/: mastra.duckdb.wal
week4-mastra/src/mastra/scorers/: weather-scorer.ts
week4-mastra/src/mastra/tools/: utility-tool.ts
week4-mastra/src/mastra/workflows/: content-workflow.ts  parallel-critic-workflow.ts
week4-openai-mastra/: CLAUDE.md  README.md  decision_matrix_2026.html  pyproject.toml
week4-openai-mastra/src/week4_openai_mastra/: __init__.py  compare_three.py  config.py  first_agent.py  guardrails.py  handoffs.py  research_note_oai.py  tool_agent.py
week5-claude-code/: README.md  extensibility-stack.html  notes.md
week6-mcp-server/: .env.example  README.md  fastmcp.json  main.py  pyproject.toml  three_primitives.html
week6-mcp-server/src/intellaigent_mcp/: config.py  models.py  server.py
week6-mcp-server/src/intellaigent_mcp/tests/: test_server.py
week7-evals/: README.md  eval_loop.html  main.py  pyproject.toml
week7-evals/src/evals/: calibrate_judge.py  compare_variants.py  config.py  eval_check_voice.py  eval_draft_thread.py  eval_judge.py  harness.py  judge.py  judge_stability.py  regression_gate.py  sut.py  traced_pipeline.py  tracer.py  variants.py
week7-evals/traces/: content-pipeline-6f914ac0.json  content-pipeline-d47cc67d.json
week8-capstone/: DECISIONS.md  notes.md
week8-capstone/reviewer/: pyproject.toml  spike.py
week8-capstone/sample-app/: README.md  angular.json  eslint.config.js  package-lock.json  package.json
week8-capstone/sample-app/src/app/: app.routes.ts  app.spec.ts  app.ts
week8-capstone/sample-app/src/app/positions/: positions.html  positions.store.ts  positions.ts
