[project]
name = "week1-tri-provider-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "prashant singh", email = "v_prashant.a@circles.co" }
]
requires-python = ">=3.13"
dependencies = [
    "openai>=2.37.0",
    "anthropic>=0.102.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "google-genai>=2.7.0",
]

[project.scripts]
week1-tri-provider-agent = "week1_tri_provider_agent:main"

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]
