[project]
name = "week2-agent-patterns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "prashant singh", email = "v_prashant.a@circles.co" }
]
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.105.2",
    "chromadb>=1.5.9",
    "openai>=2.40.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
]

[project.scripts]
week2-agent-patterns = "week2_agent_patterns:main"

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]
