[project]
name = "week4-openai-mastra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "prashant singh", email = "v_prashant.a@circles.co" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "langchain-anthropic>=1.4.6",
    "langgraph>=1.2.6",
    "openai-agents>=0.17.6",
    "pydantic>=2.13.4",
    "pydantic-ai>=1.107.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
]

[project.scripts]
week4-openai-mastra = "week4_openai_mastra:main"

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]
