[project]
name = "week6-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.116.0",
    "fastmcp>=3.4.2",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "ruff>=0.15.20",
]

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# Project name is week6-mcp-server but the importable package is
# intellaigent_mcp, so point the backend at the module explicitly.
module-name = "intellaigent_mcp"
